# ckUtilities

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILE.md  IDEA.md  PROBLEMS.md  README.md  TODO.md  llm-patches.md  patches.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml  release.yml
cmake/: AddCkTool.cmake  FetchLlama.cmake  FetchNlohmannJson.cmake  FetchTurboVision.cmake  FindCursesWithFallback.cmake  VersionFromGit.cmake
configs/: ckai.example.toml
docs/: .gitignore  ai-design.md  markdown-commands.md
docs/tools/: ck-chat.md  ck-du.md  ck-find.md  json-view.md
implementation/ai/: 00-overview.md  01-phase0-scaffolding.md  02-phase1-embeddings-index.md  03-phase2-rag-ckqna.md  04-phase3-tool-integrations.md  05-phase4-quality-extensions.md
include/ck/: about_dialog.hpp  app_info.hpp  hotkeys.hpp  launcher.hpp  options.hpp
include/ck/ai/: config.hpp  llm.hpp  model_manager.hpp  model_manager_controller.hpp  runtime_config.hpp  system_prompt_manager.hpp
include/ck/commands/: ck_chat.hpp  ck_config.hpp  ck_du.hpp  ck_edit.hpp  ck_find.hpp  ck_utilities.hpp  common.hpp  json_view.hpp
include/ck/find/: dialog_utils.hpp  guided_search.hpp  search_backend.hpp  search_dialogs.hpp  search_model.hpp
include/ck/ui/: calendar.hpp  clock_aware_application.hpp  clock_settings.hpp  clock_view.hpp  color_selector_dialog.hpp  status_line.hpp  tab_control.hpp  window_menu.hpp
lib/ckai_core/: CMakeLists.txt
lib/ckai_core/src/: config_loader.cpp  llm.cpp  model_manager.cpp  model_manager_controller.cpp  system_prompt_manager.cpp
packaging/: CPackConfig.cmake
packaging/macos/: install.sh
scripts/: apply_patches.sh  build_ck_chat.sh  ci-linux-local.sh  ci-mac-local.sh  dev.sh  generate_winget_manifest.py  new_tool.sh  run-integration.sh
src/common/: CMakeLists.txt
src/common/app-info/: CMakeLists.txt  tool_info.cpp
src/common/hotkeys/: CMakeLists.txt  default_schemes.cpp  hotkeys.cpp
src/common/layout/grid/: CMakeLists.txt  example.cpp  gridlayout.hpp
src/common/options/: CMakeLists.txt  options.cpp
src/common/ui/: CMakeLists.txt  calendar.cpp  clock_aware_application.cpp  clock_settings.cpp  clock_view.cpp  color_selector_dialog.cpp  status_line.cpp  tab_control.cpp  window_menu.cpp
src/tools/: CMakeLists.txt
src/tools/ck-chat/: CMakeLists.txt
src/tools/ck-chat/include/: chat_options.hpp
src/tools/ck-chat/src/: chat_options.cpp  chat_session.cpp  chat_session.hpp  ck-chat-app.cpp  clipboard.cpp  clipboard.hpp  commands.hpp  tvision_include.hpp
src/tools/ck-chat/src/ui/: chat_app.cpp  chat_app.hpp  chat_transcript_view.cpp  chat_transcript_view.hpp  chat_window.cpp  chat_window.hpp  interactive_model_manager.cpp  interactive_model_manager.hpp  model_dialog.cpp  model_dialog.hpp  model_loading_dialog.cpp  model_loading_dialog.hpp  model_manager_dialog.cpp  model_manager_dialog.hpp  prompt_dialog.cpp  prompt_dialog.hpp  prompt_input_view.cpp  prompt_input_view.hpp  proper_model_dialog.cpp  proper_model_dialog.hpp  simple_model_manager.cpp  simple_model_manager.hpp  solid_color_view.cpp  solid_color_view.hpp  working_model_manager.hpp
src/tools/ck-config/: CMakeLists.txt
src/tools/ck-config/src/: config-app.cpp
src/tools/ck-du/: CMakeLists.txt
src/tools/ck-du/include/: disk_usage_core.hpp  disk_usage_options.hpp
src/tools/ck-du/src/: cloud_actions.hpp  disk-usage-app.cpp  disk_usage_core.cpp  disk_usage_options.cpp  mac_cloud_operations.mm
src/tools/ck-edit/: CMakeLists.txt
src/tools/ck-edit/include/ck/edit/: markdown_editor.hpp  markdown_parser.hpp
src/tools/ck-edit/src/: ck-edit-app.cpp  markdown_editor.cpp  markdown_file_editor.cpp  markdown_parser.cpp
src/tools/ck-find/: CMakeLists.txt  README.md  TODO.md
src/tools/ck-find/docs/: guided_search_wireframe.md
src/tools/ck-find/include/ck/find/: cli_buffer_utils.hpp
src/tools/ck-find/src/: action_options_dialog.cpp  ck-find-app.cpp  command_ids.hpp  dialog_utils.cpp  guided_search.cpp  name_path_dialog.cpp  permission_ownership_dialog.cpp  search_backend.cpp  search_dialog.cpp  search_model.cpp  size_filters_dialog.cpp  text_options_dialog.cpp  time_filters_dialog.cpp  traversal_filters_dialog.cpp  type_filters_dialog.cpp
src/tools/ck-utilities/: CMakeLists.txt
src/tools/ck-utilities/include/ck/launcher/: cli_utils.hpp
src/tools/ck-utilities/src/: ck-utilities-app.cpp
src/tools/ck-win-installer/: CMakeLists.txt
src/tools/ck-win-installer/src/: main.cpp
src/tools/json-view/: CMakeLists.txt
src/tools/json-view/src/: json-view-app.cpp  json_view_core.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/ck-chat/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/app_info/: CMakeLists.txt  app_info_tests.cpp
tests/unit/ck_chat/: CMakeLists.txt  chat_markdown_tests.cpp
tests/unit/ck_du/: CMakeLists.txt  disk_usage_tests.cpp
tests/unit/ck_edit/: CMakeLists.txt  markdown_parser_tests.cpp
tests/unit/ck_find/: CMakeLists.txt  cli_buffer_utils_tests.cpp  guided_search_tests.cpp  search_backend_tests.cpp
tests/unit/ck_utilities/: CMakeLists.txt  cli_utils_tests.cpp
tests/unit/ckai_core/: CMakeLists.txt  config_loader_tests.cpp  llm_tests.cpp  model_manager_controller_tests.cpp  model_manager_tests.cpp
tests/unit/config/: CMakeLists.txt  option_registry_tests.cpp
tests/unit/hotkeys/: CMakeLists.txt  hotkeys_tests.cpp
tests/unit/json_view/: CMakeLists.txt  json_view_core_tests.cpp
